--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Monda&display=swap'); 
+
 *, *::before, *::after{
    box-sizing: border-box; 
 } 
 
 html{
     height: 100%;
+    font-family: 'Monda', sans-serif;
 }
 
 body{
@@ -12,6 +15,34 @@ body{
     padding: 0;
     display: flex;
     flex-direction: column;
+}
+
+input, 
+button{
+    appearance: none;
+    border-style: none;
+    font-family: inherit;
+}
+
+input{
+    background-color: rgb(223, 219, 219);
+    height: 25px;
+    padding: 10px 5px;
+    font-size: 1.2rem;
+}
+
+label{
+    font-size: 1.3rem;
+}
+
+button{
+    background-color: rgb(223, 219, 219);
+    border-radius: 7px;
+}
+
+button:hover{
+    cursor: pointer;
+    filter: brightness(90%);
 }
 
 .header-bar{
@@ -29,16 +60,65 @@ body{
     align-items: center;
 }
 
-.gameboard{
-    height: 500px;
+.player-menu{
+    display: flex; 
+    flex-direction: column;
+    gap: 10px;
+}
+
+.start-button{
+    margin-top: 10px;
+    place-self: center;
+    width: 150px;
+    font-size: 1.3rem;
+}
+
+
+.game-details{
+    display: none;
+}
+
+.scoreboard{
     width: 500px;
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.playerX-wins{
+    margin-top: 10px;
+}
+
+p{
+    text-align: center;
+    margin: 0;
+}
+
+.scoreboard p{
+    border-bottom: 1px solid black;
+}
+
+.game-status{
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
+
+.gameboard{
+    visibility: hidden;
+    height: 400px;
+    width: 400px;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
+    gap: 5px;
 }
 
 [class*="row"]{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
 }
 
 [class*="cell"]{
@@ -46,7 +126,8 @@ body{
     margin-bottom: -1px;
     border: 1px solid black;
     background-color: aliceblue;
-    font-size: 9rem;
+    border-radius: 5px;
+    font-size: 4.8em;
     text-align: center;
 }
 
@@ -55,9 +136,21 @@ body{
     filter: brightness(85%);
 }
 
+[class*="cell"]:active{
+    transform: scale(.95);
+}
+
+.restart-button{
+    margin-top: 20px;
+    font-size: 1.5rem;
+    padding: 5px 20px;
+    display: none;
+}
+
 /*So user cant click cells after round ends*/
 .noClick {
     pointer-events: none;
 }
+
 
 
